# med_api_patients

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: main.py
src/databases/: document.py  relational.py
src/domain/: account.py  appointments.py  general.py
src/domain/models/: account.py  appointments.py  general.py  messages.py
src/domain/services/: appointment_scheduling.py  patients.py
src/exceptions/: appointments.py
src/repositories/: appointments.py  doctors_working_time.py  messages.py  patients.py  specialists.py
src/routers/: account.py  appointments.py  messages.py  specialist.py
src/services/: appointment.py  authentication.py  data_preparation.py  general.py  helpers.py  messages.py  patients.py  security.py  specialist.py
src/texts/: patients.py
stored_procedures/: add_appointment.sql  add_email_verification.sql  add_message.sql  add_patient.sql  check_email_verification.sql  count_appointments.sql  count_messages.sql  delete_appointment.sql  get_appointment.sql  get_appointments_list.sql  get_authentication_data.sql  get_doctor_workin_time.sql  get_message.sql  get_messages_list.sql  get_specialist_working_time.sql  get_specialists_list.sql  verify_email.sql
tests/: conftest.py  data_fixtures.py
tests/test_E2E/: test_schedule_visit.py
tests/test_unit/: test_domain_account_model.py  test_domain_appointments.py
