[project]
name = "patients_api"
version = "0.1"
description = "Medicinal api public version for patients."
authors = [
    {name = "Eryk Mikolajewicz", email = "eryk.mikolajewicz@gmail.com"},
]
dependencies = [
    "fastapi==0.105.0",
    "uvicorn[standard]==0.25.0",
    "asyncpg==0.29.0",
    "motor==3.3.2",
    "python-multipart==0.0.6",
    "python-jose==3.3.0",
    "pydantic==2.5.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "httpx>=0.26.0",
    "authlib>=1.3.0",
]


[tool.pdm.scripts]
_.env_file = ".env"
start = {cmd = "uvicorn src.main:app --host='0.0.0.0' --port=8008 --reload"}
test = {cmd = "pytest --tb=long tests"}
docker_build = {cmd = "docker image build --tag=patients_api ."}
